--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+bidict==0.22.0
 CacheControl==0.12.10
 cachetools==5.0.0
 certifi==2021.10.8
@@ -5,6 +6,7 @@ charset-normalizer==2.0.12
 click==8.1.2
 firebase-admin==5.2.0
 Flask==2.1.1
+Flask-SocketIO==5.1.1
 google-api-core==2.7.1
 google-api-python-client==2.42.0
 google-auth==2.6.2
@@ -28,6 +30,8 @@ protobuf==3.20.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.7
+python-engineio==4.3.1
+python-socketio==5.5.2
 requests==2.27.1
 rsa==4.8
 six==1.16.0
