--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -4,7 +4,10 @@ project(C2ITRUS)
 set(CMAKE_CXX_STANDARD 20)
 
 add_compile_definitions(C2ITRUS_LINUX)
+
 #add_compile_definitions(C2ITRUS_WINDOWS)
+#set(CMAKE_TOOLCHAIN_FILE ${CMAKE_TOOLCHAIN_FILE} "C:/Users/Avereniect/Downloads/vcpkg/scripts/buildsystems/vcpkg.cmake")
+
 add_executable(C2ITRUS internal/main.cpp)
 
 #add_subdirectory(external/curlpp)
