--- a/ws_backend/Cargo.toml
+++ b/ws_backend/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 axum = { version = "0.5.0", features = ["ws", "http2"] }
 axum-macros = "0.2.0"
 futures = "0.3.21"
+serde = "1.0.136"
+serde_derive = "1.0.136"
 tokio = { version = "1.17.0", features = ["full"] }
 uuid = { version = "0.8.2", features = ["v4"] }
